# libYafaRay-Xml

./: CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSES  README.md
cmake/: CMakeLists.txt
cmake/generated_input/: CMakeLists.txt  yafaray_xml_version_build_info.h.in
cmake/modules/: message_boolean.cmake
include/common/: element_parser_utils.h  get_element_name.h  rgba.h  vec3f.h  version.h  version_build_info.h  yafaray_xml_common.h
include/import/: import_xml.h
include/public_api/: yafaray_xml_c_api.h  yafaray_xml_c_api_symbols.map
loader/: CMakeLists.txt  command_line_parser.h  loader_xml.cc
src/: CMakeLists.txt
src/common/: CMakeLists.txt  version_build_info.cc
src/import/: CMakeLists.txt  import_xml.cc  parse_param.cc  state_document_root.cc  state_dummy.cc  state_film.cc  state_geometry.cc  state_instance.cc  state_object.cc  state_param_map.cc  state_scene.cc  state_shader_node.cc  state_surface_integrator.cc
src/public_api/: CMakeLists.txt  yafaray_xml_c_api.cc
tests/test01/: test01.xml
tests/test02/: test02.xml
